<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.passwordforget.ForgetPasswordActivity">

    <include
        android:id="@+id/toolbarForgetPassword"
        layout="@layout/layout_toolbar_with_backbutton"/>

    <TextView
        android:id="@+id/tvForgetPasswordExplanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#272727"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/forget_password_explanation"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarForgetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvEmailForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email"
        android:textColor="#272727"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/tvForgetPasswordExplanation"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetPasswordExplanation"/>

    <EditText
        android:id="@+id/etEmailForgetPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:padding="14dp"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        android:background="@drawable/et_custom_login"
        android:hint="@string/enter_email_hint"
        android:maxLength="255"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/cursor_custom"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@id/tvEmailForgetPassword"
        app:layout_constraintTop_toBottomOf="@id/tvEmailForgetPassword"
        app:layout_constraintEnd_toEndOf="@id/tvForgetPasswordExplanation"
        tools:ignore="TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendForgetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/btn_custom_yellow"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvForgetPasswordExplanation"
        app:layout_constraintEnd_toEndOf="@id/tvForgetPasswordExplanation"/>

</androidx.constraintlayout.widget.ConstraintLayout>