<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.passwordupdate.UpdatePasswordActivity">

    <include
        android:id="@+id/toolbarUpdatePassword"
        layout="@layout/layout_toolbar_with_backbutton" />

    <ImageView
        android:id="@+id/ivLogoguruUpdatePassword"
        android:layout_width="160dp"
        android:layout_height="95dp"
        android:src="@drawable/app_logo"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarUpdatePassword"/>

    <TextView
        android:id="@+id/tvUpdatePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/prompt_password"
        android:textColor="#272727"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogoguruUpdatePassword" />

    <EditText
        android:id="@+id/etUpdatePassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/et_custom_login"
        android:cursorVisible="true"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword"
        android:maxLength="255"
        android:padding="14dp"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/cursor_custom"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvUpdatePassword"
        app:layout_constraintTop_toBottomOf="@id/tvUpdatePassword"
        tools:ignore="TextFields" />

    <ImageView
        android:id="@+id/ivEyePasswordUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="18dp"
        android:src="@drawable/ic_eye_disable"
        app:layout_constraintEnd_toEndOf="@id/etUpdatePassword"
        app:layout_constraintTop_toBottomOf="@id/tvUpdatePassword"/>

    <TextView
        android:id="@+id/tvUpdateConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/confirm_password"
        android:textColor="#272727"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUpdatePassword" />

    <EditText
        android:id="@+id/etUpdateConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/et_custom_login"
        android:cursorVisible="true"
        android:hint="@string/enter_confirm_password_hint"
        android:inputType="textPassword"
        android:maxLength="255"
        android:padding="14dp"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/cursor_custom"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvUpdatePassword"
        app:layout_constraintTop_toBottomOf="@id/tvUpdateConfirmPassword"
        tools:ignore="TextFields" />

    <ImageView
        android:id="@+id/ivEyeConfirmPasswordUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="18dp"
        android:src="@drawable/ic_eye_disable"
        app:layout_constraintEnd_toEndOf="@id/etUpdateConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/tvUpdateConfirmPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdatePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_custom_yellow"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/etUpdatePassword"
        app:layout_constraintStart_toStartOf="@id/etUpdatePassword" />

</androidx.constraintlayout.widget.ConstraintLayout>